deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facemask-api-service
  namespace: facemask

spec:
  selector:
    app: facemask-api

  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

  type: ClusterIP
